# dcmcatalog

./: .rustfmt.toml  .rusty-hook.toml  Cargo.toml  LICENSE  README.md
src/: main.rs  output.rs  types.rs
src/indexer/: dicom.rs  mod.rs  process.rs  types.rs
src/search/: mod.rs  types.rs
